# lastland.github.io

./: .gitignore  .gitmodules  CLAUDE.md  CONTEXT.md  application.html  drafts.html  index.html  publication.html  publications.bib  site.cabal  site.hs  stack.yaml  talks.yaml
.claude/: settings.local.json
.github/workflows/: ci.yml
courses/: 2023-01-12-fp.markdown  2023-04-03-sf.markdown  2024-01-08-fp.markdown  2024-04-02-verification.md  2024-09-30-fp.markdown  2024-09-30-sf.markdown  2025-03-31-popl.markdown  2025-03-31-sf.markdown  2025-09-29-fp.markdown  2026-01-03-sk.markdown  fp.markdown  popl.markdown  sf.markdown  sk.markdown  verification.md
css/: custom.css
docs/: index.html  publication.html
docs/courses/: 2023-01-12-fp.html  2023-04-03-sf.html  (+13 more)
papers/: 2014-12-04-scalahdl.markdown  2016-05-23-autobench.markdown  2017-02-22-scala-fpga.markdown  2018-07-30-ready-set-verify.markdown  2019-01-14-itree-server.markdown  2019-08-06-scala-fpga.markdown  2019-10-25-verify-ghc.markdown  2020-12-06-vale.markdown  2021-02-26-ready-set-verify.markdown  2021-06-21-kvserver.markdown  2021-08-09-forking-paths.markdown  2022-07-26-tlon.markdown  2022-09-19-thesis.markdown  2024-04-27-demand.markdown  2025-05-07-freer-arrow.markdown  2025-07-07-llm-fm.markdown  2025-10-16-memorist.markdown  2025-10-29-symcode.markdown  2026-02-01-unifying.markdown
src/: Courses.hs  Prose.hs  Publications.hs  Talks.hs
templates/: archive.html  course.html  default.html  post-list.html  post.html  pub-drafts.html  pub-entry.html  pub-list.html  pub-sections.html
test/: Spec.hs
(+37 files in other folders)
