name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:   src
  exposed-modules:  Publications
                  , Talks
  build-depends:    base == 4.*
                  , bibtex == 0.1.0.7
                  , parsec
                  , pandoc
                  , text
                  , yaml
                  , aeson
  default-language: Haskell2010

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , site
                  , hakyll == 4.16.*
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

test-suite site-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:    base == 4.*
                  , site
                  , bibtex == 0.1.0.7
                  , tasty
                  , tasty-hunit
  default-language: Haskell2010
